fix(audit): harden SIEM delivery and investigation flows